ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: frontend.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-podinfo
            port:
              number: 9898
